# gatehouse

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  gate_engine.py  pyproject.toml  python_gate
.github/workflows/: ci.yml  publish.yml
.hypothesis/constants/: 03265b8cb1cc3dbf  0758b7b601e3fd9b  0f842398d92f5de0  21db5bdefec49df3  23450225a6acea2f  37fc7afcc98a97a7  51d5cb5b5470fb79  62e232b0929db215  656af73c83fc9a7f  67b0a8ccf18bf5d2  705c1ced82304644  70818e1f51c820b1  7608c446ad7fc0d7  829b4e6f71727f77  bdc29aaa3b229f41  d694b0a8944b718e  da8fd4d072739426  e0a43db26a661327  e360c18e4260fecb  e99c419ad5bac3cb  f23102ceac6835fc
cli/: check_types.yaml  gatehouse_cli.py
examples/: gate_schema_example.yaml  standalone_usage.py
lib/: analyzer.py
plugins/: __init__.py
rules/: __init__.py  error-handling.yaml  load-confirmation.yaml  module-docstring.yaml  no-hardcoded-values.yaml  rich-progress.yaml  route-docstrings.yaml
schemas/: exploration.yaml  minimal.yaml
src/gatehouse/: __init__.py  _paths.py  auto.py  engine.py  exceptions.py  gate_engine.py  python_gate
src/gatehouse/cli/: __init__.py  branding.yaml  commands.py  gatehouse_cli.py  main.py  prompts.py  theme.yaml  wizard.py
src/gatehouse/cli/templates/: rule_template.yaml
src/gatehouse/config/: defaults.yaml
src/gatehouse/lib/: __init__.py  analyzer.py  checks.py  config.py  formatter.py  logger.py  models.py  rules.py  scope.py  theme.py  yaml_loader.py
src/gatehouse/plugins/: __init__.py  import_ordering_check.py
src/gatehouse/rules/: __init__.py  file-header.yaml  function-docstrings.yaml  hyperparameter-block.yaml  imports-present.yaml  main-guard.yaml  max-file-length.yaml  module-docstring.yaml  no-hardcoded-values.yaml
src/gatehouse/schemas/: __init__.py  api.yaml  production.yaml
tests/: __init__.py  conftest.py  test_auto.py  test_checks.py  test_cli.py  test_config.py  test_edge_cases.py  test_engine.py  test_exceptions.py  test_formatter.py  test_fuzz.py  test_models.py  test_performance.py  test_prompts.py  test_rules.py  test_scope.py  test_theme.py  test_yaml_loader.py
tests/fixtures/edge_cases/: malformed_yaml.yaml  syntax_error.py  unicode_source.py
tests/fixtures/failing/: hardcoded_values.py  missing_docstrings.py  missing_header.py  missing_main_guard.py
tests/fixtures/passing/: clean_production.py
