[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatehouse"
version = "0.2.1"
description = "Error-driven code schema enforcement for LLMs writing Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "donphi", email = "186815007+donphi@users.noreply.github.com"},
]
keywords = ["llm", "code-quality", "enforcement", "schema", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "libcst>=1.0",
]

[project.urls]
Homepage = "https://github.com/donphi/gatehouse"
Repository = "https://github.com/donphi/gatehouse"
Issues = "https://github.com/donphi/gatehouse/issues"

[project.scripts]
gatehouse = "gatehouse.cli.gatehouse_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gatehouse*"]

[tool.setuptools]
script-files = ["src/gatehouse/python_gate"]

[tool.setuptools.package-data]
"gatehouse" = [
    "rules/*.yaml",
    "schemas/*.yaml",
    "cli/*.yaml",
    "cli/templates/*.yaml",
    "plugins/*.py",
]
